--- a/our-work.html
+++ b/our-work.html
@@ -73,7 +73,7 @@
                                 <a class="ion-social-linkedin" href="#"></a>
                             </li>
                             <li class="social-icon">
-                                <a class="ion-social-instagram" href="#"></a>
+                                <a class="ion-social-instagram" href="https://www.instagram.com/7cubedandco/"></a>
                             </li>
                             <!-- <li class="social-icon">
                                 <a class="ion-social-pinterest" href="#"></a>
